--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </head>
   <body>
 
-    <!-- olas asmajjsjajsjas-->
-     <p>olasas </p>
+   
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
       <div class="container-fluid">
@@ -71,6 +70,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+    <h1>ola como hello word</h1>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
