--- a/index.html
+++ b/index.html
@@ -4,75 +4,202 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Página Web</title>
+    <link rel="icon" href="img/logo.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   </head>
-  <body>
-
-   
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Carrusel -->
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/perfil2.webp" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/portada.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/perfil2.webp" class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
+    <div class="container">
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <img src="img/logo.svg" alt="Logo" class="img-menu img-fluid" id="logo" style="margin-right: 10px;">
+      </a>
+      <button class="navbar-toggler" type="button" id="menuToggle">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-3">
+          <li class="nav-item dropdown">
+            <a class="nav-link active fw-bold fs-6" href="#" id="navbarDropdownHome" aria-expanded="false">
+              Home
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownHome">
+              <li><a class="dropdown-item" href="#">Submenu 1</a></li>
+              <li><a class="dropdown-item" href="#">Submenu 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Another submenu</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fw-semibold fs-6" href="#">Que Proponemos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fw-semibold fs-6" href="#">Que Asemos</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link fw-semibold fs-6 " href="#" id="navbarDropdownLibrary" data-bs-toggle="dropdown" aria-expanded="false">
+              Biblioteca y Recurso
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownLibrary">
+              <li><a class="dropdown-item" href="#">Option 1</a></li>
+              <li><a class="dropdown-item" href="#">Option 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Another option</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fw-semibold fs-6" href="#">Quiero Colaborar</a>
+          </li>
+        </ul>
+        <button class="btn-menu btn btn-primary fw-semibold px-4 py-2 fs-5 ms-auto" type="button">Gran Rifa 2024</button>
+      </div>
+    </div>
+  </nav>
+ <!-- Menú deslizable para pantallas pequeñas -->
+<div id="slideMenu">
+  <div class="menu-header">
+    <img src="img/logo.svg" alt="Logo" class=" img-fluid">
+    <!-- Reemplazamos el botón por un icono de Font Awesome -->
+    <i id="closeMenu" class="fas fa-times"></i> <!-- Icono de X de Font Awesome -->
+  </div>
+  <ul class="menu-list">
+    <li class="menu-item">
+      <a href="#">Home</a>
+      <ul class="submenu">
+        <li><a href="#">Submenu 1</a></li>
+        <li><a href="#">Submenu 2</a></li>
+        <li><a href="#">Another submenu</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Que Proponemos</a></li>
+    <li><a href="#">Que Asemos</a></li>
+    <li class="menu-item">
+      <a href="#">Biblioteca y Recurso</a>
+      <ul class="submenu">
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li><a href="#">Another option</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Quiero Colaborar</a></li>
+  </ul>
+</div>
+
+
+<!-- Carrusel Mejorado -->
+<div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/1.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 500px;">
+    </div>
+    <div class="carousel-item">
+      <img src="img/2.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 500px;">
+    </div>
+    <div class="carousel-item">
+      <img src="img/3.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 500px;">
+    </div>
+  </div>
+  
+  <!-- Controles del Carrusel -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<br>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
+</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
+</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
+</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
+</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
+</p>
+
+
+
+    <!-- Footer Mejorado -->
+<footer class="footer-container">
+  <div class="footer-top">
+    <div class="footer-column">
+      <h3 class="footer-title">Cesar Vallejo Mendoza</h3>
+      <div class="footer-logo">
+        <img src="img/logo.svg" alt="Logo Imperial Real Estate" />
+      </div>
+      <p class="footer-item">
+        <img class="footer-icon" src="img/map.svg" alt="Ubicación" />
+        Lima, Av La Molina, 12
+      </p>
+      <p class="footer-item">
+        <img class="footer-icon" src="img/phone.svg" alt="Teléfono" />
+        +51 985 988 558
+      </p>
+      <p class="footer-item">
+        <img class="footer-icon" src="img/mail.svg" alt="Correo" />
+        cesarvallejjomendoza23@gmail.com
+      </p>
+      <p class="footer-item">
+        <img class="footer-icon" src="img/icons8-reloj.svg" alt="Horario" />
+        Lunes - Viernes: 9:00 AM - 7:00 PM
+      </p>
     </div>
 
-    <h1>ola como hello word</h1>
+    <div class="footer-column">
+      <h3 class="footer-title">Encuéntranos</h3>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=..."
+        width="100%"
+        height="200"
+        style="border:0; border-radius: 10px;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
 
+    <div class="footer-column">
+      <h3 class="footer-title">Síguenos</h3>
+      <div class="social-links">
+        <a href="#" target="_blank"><img class="social-icon" src="img/facebook.png" alt="Facebook" /></a>
+        <a href="#" target="_blank"><img class="social-icon" src="img/instagram.png" alt="Instagram" /></a>
+        <a href="#" target="_blank"><img class="social-icon" src="img/tik-tok.png" alt="TikTok" /></a>
+        <a href="#" target="_blank"><img class="social-icon" src="img/whatsapp.png" alt="WhatsApp" /></a>
+      </div>
+      <div class="footer-links">
+        <a href="#">Aviso Legal</a>
+        <a href="#">Política de Cookies</a>
+        <a href="#">Preguntas Frecuentes</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p class="footer-copyright">
+      &copy; 2025 Cesar Vallejo Mendoza. Todos los derechos reservados.
+    </p>
+  </div>
+</footer>
+
+
+   
+
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  
+    <script src="js/menubar.js"> </script>
+  
   </body>
 </html>
