Actualiza el archivo index.html con los últimos cambios

--- a/index.html
+++ b/index.html
@@ -125,10 +125,7 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
 </p>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
-</p>
-
-
+<h1>ias</h1>
 
     <!-- Footer Mejorado -->
 <footer class="footer-container">
