cambios al carusel 19/01/2025

--- a/index.html
+++ b/index.html
@@ -87,32 +87,57 @@
 </div>
 
 
-<!-- Carrusel Mejorado -->
-<div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
+<!-- Carrusel -->
+ 
+<div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/02.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 500px;">
+      <img src="img/imagenes del colegio/4.svg" class="d-block w-100" alt="Imagen 1">
     </div>
     <div class="carousel-item">
-      <img src="img/2.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 500px;">
+      <img src="img/imagenes del colegio/1.svg" class="d-block w-100" alt="Imagen 2">
     </div>
     <div class="carousel-item">
-      <img src="img/3.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height: 500px;">
+      <img src="img/imagenes del colegio/2.svg" class="d-block w-100" alt="Imagen 3">
+    </div>
+    <div class="carousel-item">
+      <img src="img/imagenes del colegio/3.svg" class="d-block w-100" alt="Imagen 3">
+    </div>
+    <div class="carousel-item">
+      <img src="img/imagenes del colegio/5.svg" class="d-block w-100" alt="Imagen 3">
     </div>
   </div>
+<!-- 
+<div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/02.jpg" class="d-block w-100" alt="Imagen 1">
+    </div>
+    <div class="carousel-item">
+      <img src="img/2.jpg" class="d-block w-100" alt="Imagen 2">
+    </div>
+    <div class="carousel-item">
+      <img src="img/3.jpg" class="d-block w-100" alt="Imagen 3">
+    </div>
+  </div>
+-->
   
   <!-- Controles del Carrusel -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
 </div>
 
-<br>
+
+<hr>
+
+
+
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tempore voluptatum porro dolores earum blanditiis impedit inventore nam modi quidem cumque repudiandae nobis itaque corporis provident praesentium! Ea possimus laudantium porro distinctio facilis doloremque, tempore minima, vel ex ut hic fuga numquam veniam quos. Ipsum perferendis magnam dignissimos temporibus dolore nobis dolorem molestiae error possimus, inventore, facere reiciendis a quo libero, consectetur ratione illum.
 </p>
 
