--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <a class="nav-link fw-semibold fs-6" href="#">Que Proponemos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-semibold fs-6" href="#">Que Asemos</a>
+            <a class="nav-link fw-semibold fs-6" href="#">Que Hacemos</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link fw-semibold fs-6 " href="#" id="navbarDropdownLibrary" data-bs-toggle="dropdown" aria-expanded="false">
-              Biblioteca y Recurso
+              Biblioteca y Recursos
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownLibrary">
               <li><a class="dropdown-item" href="#">Option 1</a></li>
@@ -52,7 +52,7 @@
             <a class="nav-link fw-semibold fs-6" href="#">Quiero Colaborar</a>
           </li>
         </ul>
-        <button class="btn-menu btn btn-primary fw-semibold px-4 py-2 fs-5 ms-auto" type="button">Gran Rifa 2024</button>
+        <button class="btn-menu btn btn-primary fw-semibold px-4 py-2 fs-5 ms-auto" type="button">Gran Rifa 2025</button>
       </div>
     </div>
   </nav>
@@ -73,9 +73,9 @@
       </ul>
     </li>
     <li><a href="#">Que Proponemos</a></li>
-    <li><a href="#">Que Asemos</a></li>
+    <li><a href="#">Que Hacemos</a></li>
     <li class="menu-item">
-      <a href="#">Biblioteca y Recurso</a>
+      <a href="#">Biblioteca y Recursos</a>
       <ul class="submenu">
         <li><a href="#">Option 1</a></li>
         <li><a href="#">Option 2</a></li>
@@ -162,7 +162,7 @@
       </div>
       <p class="footer-item">
         <img class="footer-icon" src="img/map.svg" alt="Ubicación" />
-        Lima, Av La Molina, 12
+        Naciones Unidas, San Antonio de Chaclla 15446
       </p>
       <p class="footer-item">
         <img class="footer-icon" src="img/phone.svg" alt="Teléfono" />
@@ -174,14 +174,14 @@
       </p>
       <p class="footer-item">
         <img class="footer-icon" src="img/icons8-reloj.svg" alt="Horario" />
-        Lunes - Viernes: 9:00 AM - 7:00 PM
+        Lunes - Viernes: 8:00 AM - 4:00 PM
       </p>
     </div>
 
     <div class="footer-column">
       <h3 class="footer-title">Encuéntranos</h3>
       <iframe
-        src="https://www.google.com/maps/embed?pb=..."
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d243.98647827460556!2d-76.95327726863407!3d-11.920139237378498!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105db4f4619f083%3A0x6b6cc340133550a!2sI%20e%20cesar%20vallejo%20mendoza!5e0!3m2!1ses-419!2spe!4v1737321165331!5m2!1ses-419!2spe"
         width="100%"
         height="200"
         style="border:0; border-radius: 10px;"
@@ -194,7 +194,7 @@
     <div class="footer-column">
       <h3 class="footer-title">Síguenos</h3>
       <div class="social-links">
-        <a href="#" target="_blank"><img class="social-icon" src="img/facebook.png" alt="Facebook" /></a>
+        <a href="https://www.facebook.com/profile.php?id=100075228944815&sk=about" target="_blank"><img class="social-icon" src="img/facebook.png" alt="Facebook" /></a>
         <a href="#" target="_blank"><img class="social-icon" src="img/instagram.png" alt="Instagram" /></a>
         <a href="#" target="_blank"><img class="social-icon" src="img/tik-tok.png" alt="TikTok" /></a>
         <a href="#" target="_blank"><img class="social-icon" src="img/whatsapp.png" alt="WhatsApp" /></a>
