--- a/p1.html
+++ b/p1.html
@@ -9,10 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="css/style02.css" rel="stylesheet">
+  
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core">
+
 </head>
 
 <body>
@@ -84,7 +88,6 @@
       <a href="https://tiktok.com" target="_blank" class="text-dark fs-4"><i class="fab fa-tiktok"></i></a>
     </div>
   </div>
-  
 
 
   <!-- Carrusel -->
@@ -123,7 +126,24 @@
 
 
 
-  <div class="custom-shadow-line"></div>
+    <!-- Estructura del modal para El Anuncio Flotane -->
+<div class="modal" id="modal">
+  <div class="card xyz-in-zoom-up">
+    <button class="close-btn xyz-out-zoom-down" id="closeModal">&times;</button>
+    <img src="img-pruebas/anuncio.svg" alt="Anuncio">
+  </div>
+</div>
+
+<!-- -----------------------Linea de sepacion de Bloques-------------------------- -->
+ <br>
+<div class="horizontal-line"></div>
+
+
+
+<!-- ----------------------------------------------
+
+<!-- ---------------------Bloque 3 , circulos---------------------------- -->
+  
   
   <div class="container-2">
     <div class="section-title">
@@ -132,90 +152,58 @@
   
     <div class="circle-container">
       <div class="circle-item">
-        <img src="#" alt="" />
+        <img src="img-pruebas/cir-1.svg" alt="" />
         <p>Identidad Misión</p>
       </div>
       <div class="circle-item">
-        <img src="#" alt="" />
+        <img src="img-pruebas/cir-2.svg" alt="" />
         <p>Propuesta Educativa de Calidad</p>
       </div>
       <div class="circle-item">
-        <img src="#" alt="" />
+        <img src="img-pruebas/cir-3.svg" alt="" />
         <p>Innovación y Construcción</p>
       </div>
       <div class="circle-item">
-        <img src="#" alt="" />
+        <img src="img-pruebas/cir-4.svg" alt="" />
         <p>Cambio Social</p>
       </div>
       <div class="circle-item">
-        <img src="#" alt="" />
+        <img src="img-pruebas/cir-5.svg" alt="" />
         <p>Sostenibilidad</p>
       </div>
     </div>
   </div>
-  
+  <!-- -----------------------Linea de sepacion de Bloques-------------------------- -->
+ <br>
+ <div class="horizontal-line"></div>
+ <br>
 
   <div class="container-2">
     <div class="section-title">
-      <h2>Ejes y Objetivos Estratégicos</h2>
+      <h2>  Construyamos Juntos el Futuro</h2>
     </div>
-  
-    <div class="circle-container">
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Identidad Misión</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Propuesta Educativa de Calidad</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Innovación y Construcción</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Cambio Social</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Sostenibilidad</p>
-      </div>
+
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/JE2ncyNkxb8?si=oRHlBkYVX0VhRB8P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+
   </div>
 
-  <div class="container-2">
-    <div class="section-title">
-      <h2>Ejes y Objetivos Estratégicos</h2>
-    </div>
-  
-    <div class="circle-container">
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Identidad Misión</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Propuesta Educativa de Calidad</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Innovación y Construcción</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Cambio Social</p>
-      </div>
-      <div class="circle-item">
-        <img src="#" alt="" />
-        <p>Sostenibilidad</p>
-      </div>
-    </div>
+  <br>
+ <div class="horizontal-line"></div>
+ <br>
+
+ <div class="container-2">
+  <div class="section-title">
+    <h2>Novedades</h2>
   </div>
 
-  <h1>ias</h1>
+  
 
-  <!-- Footer Mejorado -->
+</div>
+  
+
+  <!-- Footer  -->
   <footer class="footer-container">
     <div class="footer-top">
       <div class="footer-column">
@@ -276,11 +264,13 @@
 
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/AnuncioFlotante.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
   <script src="js/menubar.js"> </script>
+
 </body>
 
 </html>
