--- a/p1.html
+++ b/p1.html
@@ -37,19 +37,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-3">
           <li class="nav-item">
-            <a class="nav-link fw-semibold fs-6" href="#">Home</a>
+            <a class="nav-link fw-semibold fs-6" href="p1.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-semibold fs-6" href="#">Que Proponemos</a>
+            <a class="nav-link fw-semibold fs-6" href="QueProponemos.html">Que Proponemos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-semibold fs-6" href="#">Que Hacemos</a>
+            <a class="nav-link fw-semibold fs-6" href="QueHacemos.html">Que Hacemos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-semibold fs-6" href="#">Biblioteca y Recursos</a>
+            <a class="nav-link fw-semibold fs-6" href="Biblioteca.html">Biblioteca y Recursos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fw-semibold fs-6" href="#">Quiero Colaborar</a>
+            <a class="nav-link fw-semibold fs-6" href="QuieroColaborar.html">Quiero Colaborar</a>
           </li>
         </ul>
   
