--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="img/logo.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link href="css/style02.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/styleDark.css" rel="stylesheet">
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +22,8 @@
 </head>
 
 <body>
+
+
   <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
@@ -30,10 +33,12 @@
 
 
 
-
       <button class="navbar-toggler" type="button" id="menuToggle">
-        <span class="navbar-toggler-icon"></span>
+        <i class="bi bi-list" id="burgerIcon"></i> <!-- Aquí estamos usando el ícono de lista -->
       </button>
+      
+      
+
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-3">
@@ -62,11 +67,30 @@
           <a href="https://tiktok.com" target="_blank" class="text-dark fs-4"><i class="fab fa-tiktok"></i></a>
         </div>
       </div>
+
+      <div class="dark d-flex gap-3">
+        <!-- Botón de cambio de tema más grande -->
+        <label for="themeToggle" class="themeToggle st-sunMoonThemeToggleBtn" type="checkbox">
+          <input type="checkbox" id="themeToggle" class="themeToggleInput" />
+          <svg width="30" height="30" viewBox="0 0 20 20" fill="currentColor" stroke="none">
+            <mask id="moon-mask">
+              <rect x="0" y="0" width="20" height="20" fill="white"></rect>
+              <circle cx="11" cy="3" r="8" fill="black"></circle>
+            </mask>
+            <circle class="sunMoon" cx="10" cy="10" r="8" mask="url(#moon-mask)"></circle>
+            <g>
+              <circle class="sunRay sunRay1" cx="18" cy="10" r="1.5"></circle>
+              <circle class="sunRay sunRay2" cx="14" cy="16.928" r="1.5"></circle>
+              <circle class="sunRay sunRay3" cx="6" cy="16.928" r="1.5"></circle>
+              <circle class="sunRay sunRay4" cx="2" cy="10" r="1.5"></circle>
+              <circle class="sunRay sunRay5" cx="6" cy="3.1718" r="1.5"></circle>
+              <circle class="sunRay sunRay6" cx="14" cy="3.1718" r="1.5"></circle>
+            </g>
+          </svg>
+        </label>
+      </div>
     </div>
   </nav>
-
-
-
 
 
   <div id="slideMenu">
@@ -123,7 +147,7 @@
   </div>
 
 
-  <!-- Estructura del modal para El Anuncio Flotane -->
+  <!-- Estructura del modal para El Anuncio Flotane   -->
   <div class="modal" id="modal">
     <div class="card xyz-in-zoom-up">
       <button class="close-btn xyz-out-zoom-down" id="closeModal">&times;</button>
@@ -131,7 +155,7 @@
     </div>
   </div>
 
-  
+ 
 
   <!-- ---------------------Bloque 3 , circulos---------------------------- -->
   <!-- Bloque siguiente (Círculos) -->
@@ -187,7 +211,7 @@
 
 
   <!-- -----------------------Linea de sepacion de Bloques-------------------------- -->
- 
+
 
 
 
@@ -204,10 +228,10 @@
       </iframe>
     </div>
   </div>
-  
 
 
- 
+
+
 
 
   <!--  NOVEDADE DEL COLEGIO  -->
@@ -437,6 +461,7 @@
 
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/dark.js"></script>
   <script src="js/animacionesVentana.js"></script>
   <script src="js/AnuncioFlotante.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
