correcio de ortografia

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <div class="inner-circle"></div>
           <div class="message">Propuesta Educativa de Calidad</div> <!-- Mensaje dentro del círculo -->
         </div>
-        <p>Educación accesible y de calidad para todos.</p> <!-- Texto debajo del círculo -->
+        <p>Educación accesible y de calidad para todos</p> <!-- Texto debajo del círculo -->
       </div>
       <div class="circle-item">
         <div class="circle red">
@@ -179,7 +179,7 @@
           <div class="inner-circle"></div>
           <div class="message">Innovación y Construcción</div> <!-- Mensaje dentro del círculo -->
         </div>
-        <p>Construcción e innovación continua para mejorar.</p> <!-- Texto debajo del círculo -->
+        <p>Construcción e innovación continua para mejorar</p> <!-- Texto debajo del círculo -->
       </div>
 
       <div class="circle-item">
@@ -188,7 +188,7 @@
           <div class="inner-circle"></div>
           <div class="message">Innovación y Construcción</div> <!-- Mensaje dentro del círculo -->
         </div>
-        <p>Transformando ideas en soluciones reales.</p> <!-- Texto debajo del círculo -->
+        <p>Transformando ideas en soluciones reales</p> <!-- Texto debajo del círculo -->
       </div>
       <div class="circle-item">
         <div class="circle yellow">
@@ -196,7 +196,7 @@
           <div class="inner-circle"></div>
           <div class="message">Innovación y Construcción</div> <!-- Mensaje dentro del círculo -->
         </div>
-        <p>Creando oportunidades con innovación.</p> <!-- Texto debajo del círculo -->
+        <p>Creando oportunidades con innovación</p> <!-- Texto debajo del círculo -->
       </div>
       <div class="circle-item">
         <div class="circle purple">
@@ -204,7 +204,7 @@
           <div class="inner-circle"></div>
           <div class="message">Innovación y Construcción</div> <!-- Mensaje dentro del círculo -->
         </div>
-        <p>Impulsando el cambio a través de la creatividad.</p> <!-- Texto debajo del círculo -->
+        <p>Impulsando el cambio a través de la creatividad</p> <!-- Texto debajo del círculo -->
       </div>
     </div>
   </div>
@@ -302,8 +302,8 @@
         </div>
         <div class="profesor-card__content">
           <p class="profesor-card__description">
-            "Profesora de matemáticas, apasionada por ayudar a los estudiantes a descubrir el mundo de los números.
-            ¡Siempre con una sonrisa!"
+            "Profesora de matemáticas, apasionada por ayudar a los estudiantes a descubrir el maravilloso mundo de los números.
+             ¡Siempre con una sonrisa!"
           </p>
         </div>
       </section>
@@ -323,8 +323,8 @@
         </div>
         <div class="profesor-card__content">
           <p class="profesor-card__description">
-            "Profesor de historia, con una pasión infinita por compartir las grandes lecciones del pasado. ¡La historia
-            vive!"
+            "Profesor de historia, apasionado por compartir las grandes lecciones del pasado.
+             ¡La historia está viva!"
           </p>
         </div>
       </section>
@@ -344,8 +344,7 @@
         </div>
         <div class="profesor-card__content">
           <p class="profesor-card__description">
-            "Educadora en ciencias naturales, siempre inspirando a los estudiantes a explorar el fascinante mundo que
-            nos rodea."
+            "Educadora en ciencias naturales, dedicada a inspirar a los estudiantes a explorar el fascinante mundo que nos rodea."
           </p>
         </div>
       </section>
@@ -365,8 +364,7 @@
         </div>
         <div class="profesor-card__content">
           <p class="profesor-card__description">
-            "Experto en literatura, con un enfoque innovador para hacer que cada clase sea una aventura literaria
-            emocionante."
+            "Experto en literatura, con un enfoque innovador para convertir cada clase en una emocionante aventura literaria."
           </p>
         </div>
       </section>
@@ -386,8 +384,7 @@
         </div>
         <div class="profesor-card__content">
           <p class="profesor-card__description">
-            "Profesora de inglés, comprometida con crear un ambiente de aprendizaje dinámico y participativo en cada
-            clase."
+            "Profesora de inglés, comprometida con crear un ambiente de aprendizaje dinámico, participativo y motivador en cada clase."
           </p>
         </div>
       </section>
